# UCF-Chip-4

./: Cargo.toml  README.md
.github/actions/rust-toolchain/: README.md  action.yaml
.github/workflows/: ci.yml
app/: Cargo.toml
app/src/: main.rs
cbv/: Cargo.toml
cbv/src/: lib.rs
config/: keys_bootstrap.yaml  ruleset.yaml
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: digest.rs  lib.rs
crates/consistency/: Cargo.toml
crates/consistency/src/: lib.rs
crates/limits/: Cargo.toml
crates/limits/src/: lib.rs
crates/micro_evidence/: Cargo.toml
crates/micro_evidence/src/: lib.rs
crates/proposal_activations/: Cargo.toml
crates/proposal_activations/src/: lib.rs
crates/proposals/: Cargo.toml
crates/proposals/src/: lib.rs
crates/recovery/: Cargo.toml
crates/recovery/src/: lib.rs
crates/replay_runs/: Cargo.toml
crates/replay_runs/src/: lib.rs
crates/retention/: Cargo.toml
crates/retention/src/: lib.rs
crates/rpp_engine/: Cargo.toml
crates/rpp_engine/src/: lib.rs
crates/rpp_proofs/: Cargo.toml
crates/rpp_proofs/src/: lib.rs
crates/rpp_store/: Cargo.toml
crates/rpp_store/src/: lib.rs
crates/tool_events/: Cargo.toml
crates/tool_events/src/: lib.rs
crates/trace_runs/: Cargo.toml
crates/trace_runs/src/: lib.rs
dlp_store/: Cargo.toml
dlp_store/src/: lib.rs
docs/: architecture.md  proposals.md
engine/: Cargo.toml
engine/src/: lib.rs
gem/: Cargo.toml
gem/src/: lib.rs
keys/: Cargo.toml
keys/src/: lib.rs
milestones/: Cargo.toml
milestones/src/: lib.rs  macro_deriver.rs  meso_deriver.rs
pev/: Cargo.toml
pev/src/: lib.rs
profiles/: Cargo.toml
profiles/src/: lib.rs
pvgs/: Cargo.toml
pvgs/src/: lib.rs
pvgs_client/: Cargo.toml
pvgs_client/src/: lib.rs
query/: Cargo.toml
query/src/: lib.rs
query/tests/: evidence_smoke.rs
receipts/: Cargo.toml
receipts/src/: lib.rs
replay/: Cargo.toml
replay/src/: lib.rs
replay_plan/: Cargo.toml
replay_plan/src/: lib.rs
rsv/: Cargo.toml
rsv/src/: lib.rs
sep/: Cargo.toml
sep/src/: lib.rs
tests/: proposal_activation_e2e.rs
tool_registry_state/: Cargo.toml
tool_registry_state/src/: lib.rs
ucf-protocol/: Cargo.toml
ucf-protocol/src/: lib.rs
vrf/: Cargo.toml
vrf/src/: lib.rs
wire/: Cargo.toml
wire/src/: lib.rs
