[workspace]
members = [
    "wire",
    "ucf-protocol",
    "pvgs",
    "pev",
    "receipts",
    "vrf",
    "sep",
    "cbv",
    "keys",
    "pvgs_client",
    "query",
    "app",
    "rsv",
    "profiles",
    "engine",
    "tool_registry_state",
    "replay",
    "replay_plan",
    "gem",
    "dlp_store",
    "milestones",
    "crates/consistency",
    "crates/limits",
    "crates/retention",
    "crates/recovery",
    "crates/tool_events", "crates/common",
    "crates/micro_evidence",
    "crates/replay_runs",
    "crates/trace_runs",
    "crates/assets",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license-file = "LICENSE.md"
homepage = "https://github.com/HUBId/ztate"
repository = "https://github.com/HUBId/ztate"
readme = "README.md"

[workspace.dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = { version = "0.9" }
blake3 = "1"
ed25519-dalek = "2"
rand_core = "0.6"
prost = { version = "0.12", features = ["prost-derive"] }
hex = "0.4"
limits = { path = "crates/limits" }
ucf-protocol = { path = "ucf-protocol" }
recovery = { path = "crates/recovery" }
replay_runs = { path = "crates/replay_runs" }
trace_runs = { path = "crates/trace_runs" }

[patch.crates-io]
firewood = { path = "vendor/ztate/firewood" }
firewood-storage = { path = "vendor/ztate/storage" }
storage-firewood = { path = "vendor/ztate/storage-firewood" }
firewood-triehash = { path = "vendor/ztate/triehash" }
rpp-pruning = { path = "vendor/ztate/rpp-pruning" }
