[workspace]
members = [
    "wire",
    "ucf-protocol",
    "pvgs",
    "pev",
    "receipts",
    "vrf",
    "sep",
    "cbv",
    "keys",
    "pvgs_client",
    "query",
    "app",
    "rsv",
    "profiles",
    "engine",
    "tool_registry_state",
    "replay",
    "replay_plan",
    "gem",
    "dlp_store",
    "milestones",
    "crates/consistency",
    "crates/limits",
    "crates/retention",
    "crates/recovery",
    "crates/tool_events", "crates/common",
    "crates/micro_evidence",
    "crates/replay_runs",
    "crates/trace_runs",
    "crates/assets",
    "crates/rpp_store",
    "crates/rpp_proofs",
    "crates/rpp_engine",
    "crates/proposals",
    "crates/proposal_activations",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.13"
license-file = "LICENSE.md"
homepage = "https://avalabs.org"
repository = "https://github.com/ava-labs/chain"
readme = "README.md"

[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "warn"
explicit_deref_methods = "warn"
missing_const_for_fn = "warn"
arithmetic_side_effects = "warn"
undocumented_unsafe_blocks = "deny"
pedantic = { level = "warn", priority = -1 }
needless_pass_by_value = "allow"
unnecessary_wraps = "allow"
unused_self = "allow"
cast_possible_truncation = "allow"

[workspace.dependencies]
aquamarine = "=0.6.0"
bytemuck = "=1.23.2"
bytemuck_derive = "=1.10.2"
clap = { version = "=4.5.50", default-features = false, features = ["derive", "std"] }
coarsetime = "=0.1.36"
criterion = "=0.7.0"
env_logger = "=0.11.8"
ethereum-types = "=0.15.1"
fastrace = "=0.7.14"
firewood = { path = "vendor/ztate/firewood", version = "0.0.13" }
firewood-macros = { version = "0.0.13" }
firewood-storage = { path = "vendor/ztate/storage", version = "0.0.13" }
firewood-triehash = { path = "vendor/ztate/triehash", version = "0.0.13" }
hex-literal = "=1.0.0"
integer-encoding = "=4.0.2"
metrics = "=0.24.2"
nonzero_ext = "=0.3.0"
pprof = "=0.15.0"
rand = "=0.9.2"
serde_json = { version = "=1.0.145", default-features = false, features = ["std"] }
sha2 = "=0.10.9"
smallvec = { version = "=1.15.1", features = ["write", "union"] }
test-case = "=3.3.1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = { version = "0.9" }
blake3 = "1"
ed25519-dalek = "2"
rand_core = "0.6"
prost = { version = "0.12", features = ["prost-derive"] }
hex = "0.4"
tempfile = "=3.23.0"
tracing = { version = "=0.1.41", default-features = false, features = ["attributes", "log", "std"] }
limits = { path = "crates/limits" }
ucf-protocol = { path = "ucf-protocol" }
recovery = { path = "crates/recovery" }
replay_runs = { path = "crates/replay_runs" }
trace_runs = { path = "crates/trace_runs" }

[patch.crates-io]
firewood = { path = "vendor/ztate/firewood" }
firewood-storage = { path = "vendor/ztate/storage" }
storage-firewood = { path = "vendor/ztate/storage-firewood" }
firewood-triehash = { path = "vendor/ztate/triehash" }
rpp-pruning = { path = "vendor/ztate/rpp/pruning" }
