[package]
name = "app"
version = "0.1.0"
edition.workspace = true

[dependencies]
pvgs = { path = "../pvgs" }
receipts = { path = "../receipts" }
vrf = { path = "../vrf" }
sep = { path = "../sep" }
cbv = { path = "../cbv" }
keys = { path = "../keys" }
wire = { path = "../wire" }
query = { path = "../query" }
ucf-protocol = { path = "../ucf-protocol" }
pev = { path = "../pev" }
replay_plan = { path = "../replay_plan" }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
recovery = { path = "../crates/recovery" }

[dev-dependencies]
assets = { path = "../crates/assets" }
micro_evidence = { path = "../crates/micro_evidence" }
