[package]
name = "keys"
version = "0.1.0"
edition.workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
rand_core = { workspace = true, features = ["getrandom"] }
blake3 = { workspace = true }
ucf-protocol = { path = "../ucf-protocol" }
sep = { path = "../sep" }
