[package]
name = "pvgs"
version = "0.1.0"
edition.workspace = true

[dependencies]
blake3.workspace = true
serde = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
sep = { path = "../sep" }
ucf-protocol = { path = "../ucf-protocol" }
pev = { path = "../pev" }
receipts = { path = "../receipts" }
keys = { path = "../keys" }
vrf = { path = "../vrf" }
prost = { workspace = true }
cbv = { path = "../cbv" }
thiserror.workspace = true
ed25519-dalek.workspace = true
