[package]
name = "pvgs"
version = "0.1.0"
edition.workspace = true

[dependencies]
blake3.workspace = true
serde = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
sep = { path = "../sep" }
ucf-protocol = { path = "../ucf-protocol" }
dlp_store = { path = "../dlp_store" }
pev = { path = "../pev" }
receipts = { path = "../receipts" }
keys = { path = "../keys" }
vrf = { path = "../vrf" }
prost = { workspace = true }
cbv = { path = "../cbv" }
thiserror.workspace = true
ed25519-dalek.workspace = true
tool_registry_state = { path = "../tool_registry_state" }
hex = "0.4"
milestones = { path = "../milestones" }

[features]
default = []
serde = [
    "dep:serde",
    "serde_yaml",
    "ucf-protocol/serde",
    "milestones/serde",
]
