[package]
name = "query"
version = "0.1.0"
edition.workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
pvgs = { path = "../pvgs" }
receipts = { path = "../receipts" }
sep = { path = "../sep" }
vrf = { path = "../vrf" }
cbv = { path = "../cbv" }
pev = { path = "../pev" }
keys = { path = "../keys" }
wire = { path = "../wire" }
ucf-protocol = { path = "../ucf-protocol" }
dlp_store = { path = "../dlp_store" }
milestones = { path = "../milestones" }
replay_plan = { path = "../replay_plan" }
hex = "0.4"
prost = { workspace = true }
recovery = { path = "../crates/recovery" }
