[package]
name = "receipts"
version = "0.1.0"
edition.workspace = true

[dependencies]
serde = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
ucf-protocol = { path = "../ucf-protocol" }
keys = { path = "../keys" }
common = { path = "../crates/common" }
prost.workspace = true
blake3.workspace = true
ed25519-dalek.workspace = true
