[package]
name = "sep"
version = "0.1.0"
edition.workspace = true

[dependencies]
blake3.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
log = "0.4"
limits = { workspace = true }
ucf-protocol = { workspace = true }
