[package]
name = "vrf"
version = "0.1.0"
edition.workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
blake3.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true
sha2 = "0.10"
