[package]
name = "proposal_activations"
version = "0.1.0"
edition.workspace = true

[dependencies]
thiserror.workspace = true
blake3.workspace = true
serde = { workspace = true, optional = true }
prost.workspace = true
ucf-protocol = { path = "../../ucf-protocol" }

[features]
serde = ["dep:serde"]
