[package]
name = "rpp_proofs"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
blake3 = { workspace = true }

[features]
default = []
rpp-proof-envelope = []

[lints]
workspace = true
