[package]
name = "rpp_store"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
blake3 = { workspace = true }
thiserror = { workspace = true }

firewood = { workspace = true, optional = true }
firewood-storage = { workspace = true, optional = true }
firewood-triehash = { workspace = true, optional = true }
storage-firewood = { path = "../../vendor/ztate/storage-firewood", optional = true }
keccak-hasher = { version = "=0.16.0", optional = true }
ethereum-types = { workspace = true, optional = true }

[features]
default = []
rpp-firewood = [
    "dep:firewood",
    "dep:firewood-storage",
    "dep:firewood-triehash",
    "dep:storage-firewood",
    "dep:keccak-hasher",
    "dep:ethereum-types",
]

[lints]
workspace = true
