[package]
name = "rpp_store"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
blake3 = { workspace = true }
thiserror = { workspace = true }

firewood-triehash = { workspace = true, optional = true }
storage-firewood = { path = "../../vendor/ztate/storage-firewood", optional = true }
keccak-hasher = { version = "=0.16.0", optional = true }

[features]
default = []
rpp-firewood = [
    "dep:firewood-triehash",
    "dep:storage-firewood",
    "dep:keccak-hasher",
]

[lints]
workspace = true
